// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-jest instruments only specific files and collects coverage 1`] = `
"------------|----------|----------|----------|----------|-------------------|
File        |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
------------|----------|----------|----------|----------|-------------------|
All files   |    83.33 |      100 |       50 |       80 |                   |
 Covered.js |    83.33 |      100 |       50 |       80 |                13 |
------------|----------|----------|----------|----------|-------------------|"
`;

exports[`custom transformer instruments files 1`] = `
"----------|----------|----------|----------|----------|-------------------|
File      |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
----------|----------|----------|----------|----------|-------------------|
All files |        0 |        0 |        0 |        0 |                   |
----------|----------|----------|----------|----------|-------------------|"
`;

exports[`no babel-jest instrumentation with no babel-jest 1`] = `
"------------|----------|----------|----------|----------|-------------------|
File        |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
------------|----------|----------|----------|----------|-------------------|
All files   |    83.33 |      100 |       50 |       80 |                   |
 Covered.js |    83.33 |      100 |       50 |       80 |                13 |
------------|----------|----------|----------|----------|-------------------|
"
`;
